--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+import Kort from "../components/Kort.astro";
 ---
 
 <html lang="en">
@@ -11,7 +11,8 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<h1>Kampagne - navn</h1>
+		<Kort></Kort>
 	</body>
 </html>
 
