--- a/src/components/Kort.astro
+++ b/src/components/Kort.astro
@@ -1,3 +1,6 @@
+---
+import "../css/style.css";
+---
 <div class="kort">
     <div class="grid">
         <img src="../../public/img/gio.png" alt="">
