--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import "../css/style.css";
 import Kort from "../components/Kort.astro";
+import Cirkler from "../components/Cirkler.astro";
 ---
 
 <html lang="da">
@@ -17,6 +18,8 @@ import Kort from "../components/Kort.astro";
 	<body>
 		<h1>Kampagne - navn</h1>
 		<Kort></Kort>
+		<Cirkler />
+
 	</body>
 </html>
 
