guld box is dooone

--- a/src/components/Guldbox.astro
+++ b/src/components/Guldbox.astro
@@ -1,1 +1,91 @@
-<h1></h1>
+
+<h1>Your Future - Within Business</h1>
+
+<div class="box">
+    <h2>Studiepartner</h2>
+    <p>I CA handler det om business - din business, dig og din fremtidige karriere.Vi er et supplement til dit studie og arbejder for, at du får et lettere studieliv og styrket dine muligheder for at skabe et inspirerende og godt arbejdsliv efter dit studie.</p>
+    
+    <div class="button">
+    <a class="button1" href="">Læs mere</a>
+    <a class="button2" href="">Blev Medlem</a>
+    </div>
+</div>
+
+<style>
+
+h1 {
+    font-size: 170%;
+}
+
+p {
+    margin-left: 6%;
+    margin-right: 6%;
+}
+
+h2 {
+    margin-left: 6%;
+    padding-top: 5%;
+}
+    .box {
+    background-color: #B09000;
+    width: 360px; 
+    height: 260px; 
+    border-radius: 15px;
+    }
+
+    .button1 {
+    display: inline-block;
+    background-color:  #B09000;;
+    color: #fff; 
+    padding: 12px 40px;
+    margin: 10px; 
+    border-radius: 6px;
+    text-decoration: none;
+    border: 2px solid #fff;
+    
+    }
+
+    .button2 {
+    display: inline-block;
+    background-color:  #ffffff;;
+    color: #B09000; 
+    padding: 12px 40px;
+    margin: 10px; 
+    border-radius: 6px;
+    text-decoration: none;
+    border: 2px solid #fff;
+    position: absolute;
+    }
+
+
+/** MOBILE (WEB) **/
+@media only screen and (min-width: 768px) {
+ .box {
+    background-color: #B09000;
+    width: 60%; 
+    height: 250px; 
+    border-radius: 15px;
+    position: relative;
+    left: 22%;
+    }
+    
+    h1 {
+     font-size: 290%;
+     padding-left: 30%;
+}
+
+  .button {
+        padding-left: 30%;
+    }
+
+.button1:hover {
+     background-color: #fff; 
+    color: #B09000; 
+}
+.button2:hover {
+   background-color: #B09000; 
+    color: #fff;
+}
+}
+</style>
+
