--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Guldbox from "../components/Guldbox.astro";
 
 ---
 
@@ -12,6 +13,7 @@
 	</head>
 	<body>
 		<h1>Astro</h1>
+	<Guldbox/>
 	</body>
 </html>
 
