guldbox added i index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import "../css/style.css";
 import Kort from "../components/Kort.astro";
+import Guldbox from "../components/Guldbox.astro";
 ---
 
 <html lang="da">
