--- a/src/components/Cirkler.astro
+++ b/src/components/Cirkler.astro
@@ -1,35 +1,48 @@
 ---
 ---
 
-<div class="grid-container">
-    <div class="top-images">
+  <div class="images-container">
+    <div>
     <img src="../../public/img/Karrierskift.png" alt="Image 1">
-    <img src="../../public/img/Studere-du-business.png" alt="Image 2">
-    </div>
-    <div class="bottom-images">
-      <img src="../../public/img/Medlem-af-CA.png" alt="Image 1">
-       <img src="../../public/img/Dagpenge.png" alt="Image 1">
-    </div>
+    <p>Karrierskift</p>
+     </div>
+     <div>
+     <img src="../../public/img/Studere-du-business.png" alt="Image 2">
+     <p>Studere du business?</p>
+     </div>
+     <div>
+        <img src="../../public/img/Medlem-af-CA.png" alt="Image 3">
+         <p>Medlem af CA</p>
+     </div>
+<div>
+    <img src="../../public/img/Dagpenge.png" alt="Image 4">
+    <p>Dagpenge</p>
+</div>
   </div>
 
-
-  <style>
-  .grid-container {
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    gap: 10px;
-  }
-
-  .top-images,
-  .bottom-images {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
-  }
-
+<style>
   img {
     max-width: 100%;
     height: auto;
     display: block;
+  }
+
+  .images-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    text-align: center;
+    margin: 20px;
+  }
+
+   .images-container p {
+margin: 10px;
+  }
+  @media (min-width: 769px) {
+    /* Desktop layout - All images in one row */
+    .images-container {
+      grid-template-rows: 1fr;
+      grid-template-columns: repeat(4, 1fr);
+    }
   }
 </style>
