--- a/src/components/Cirkler.astro
+++ b/src/components/Cirkler.astro
@@ -44,5 +44,10 @@ margin: 10px;
       grid-template-rows: 1fr;
       grid-template-columns: repeat(4, 1fr);
     }
+
+     .images-container img {
+   max-width: 70%;
+    margin-left: 50px;
+    }
   }
 </style>
