rettet små fejl

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import "../css/style.css";
 import Kort from "../components/Kort.astro";
 import Guldbox from "../components/Guldbox.astro";
+import Cirkler from "../components/Cirkler.astro";
 ---
 
 <html lang="da">
@@ -17,6 +18,9 @@ import Guldbox from "../components/Guldbox.astro";
 	</head>
 	<body>
 		<h1>Astro</h1>
+		<Kort />
+		<Cirkler />
+		<Guldbox />
 	</body>
 </html>
 
