--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import "../css/style.css";
 import Kort from "../components/Kort.astro";
 import Guldbox from "../components/Guldbox.astro";
 import Cirkler from "../components/Cirkler.astro";
+import Video from "../components/Video.astro";
 ---
 
 <html lang="da">
@@ -21,6 +22,7 @@ import Cirkler from "../components/Cirkler.astro";
 		<Kort />
 		<Cirkler />
 		<Guldbox />
+		<Video />
 	</body>
 </html>
 
