--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -11,8 +11,20 @@
   border: 3.5px solid #204A78;
   border-radius: 15px;
   box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
-  margin-top: 7%;
   margin: 20px 20px;
 }
+
+  @media (min-width: 769px) {
+    .video {
+  width: 88%;
+  height: 39%;
+  aspect-ratio: 560/315;
+  border: 3.5px solid #204A78;
+  border-radius: 15px;
+  box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+  margin: 20px 20px;
+}
+
+  }
 
 </style>
