--- a/src/components/Cirkler.astro
+++ b/src/components/Cirkler.astro
@@ -46,8 +46,13 @@ margin: 10px;
     }
 
      .images-container img {
-   max-width: 70%;
-    margin-left: 50px;
+   max-width: 50%;
+    margin-left: 157px;
     }
+
+.images-container p {
+margin-left: 154px;
+  }
+
   }
 </style>
