--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,7 +14,7 @@
     /* Farver */
     --text-navy: #204A78;
     --text-lightblue: #1895D3;
-    --text-black: #000;
+    --text-gray: #4A4A4A;
     --text-offwhite: #E6E6DE;
     --text-gold: #AB912E;
 }
