--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Kort from "../components/Kort.astro";
 import Guldbox from "../components/Guldbox.astro";
 import Cirkler from "../components/Cirkler.astro";
 import Video from "../components/Video.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <html lang="da">
@@ -23,6 +24,8 @@ import Video from "../components/Video.astro";
 		<Cirkler />
 		<Guldbox />
 		<Video />
+
+		<Footer />
 	</body>
 </html>
 
