nav + guldbox ændringer

--- a/src/components/Guldbox.astro
+++ b/src/components/Guldbox.astro
@@ -4,7 +4,6 @@
 <div class="box">
     <h2>Studiepartner</h2>
     <p>I CA handler det om business - din business, dig og din fremtidige karriere.Vi er et supplement til dit studie og arbejder for, at du får et lettere studieliv og styrket dine muligheder for at skabe et inspirerende og godt arbejdsliv efter dit studie.</p>
-    
     <div class="button">
     <a class="button1" href="">Læs mere</a>
     <a class="button2" href="">Blev Medlem</a>
@@ -25,19 +24,26 @@ p {
 h2 {
     margin-left: 6%;
     padding-top: 5%;
+    padding-bottom: 1%;
 }
     .box {
     background-color: #B09000;
     width: 360px; 
     height: 260px; 
     border-radius: 15px;
+    margin-left: 2%;
+    }
+
+    .button {
+        padding-top: 2%;
+        padding-left: 2%;
     }
 
     .button1 {
     display: inline-block;
     background-color:  #B09000;;
     color: #fff; 
-    padding: 12px 40px;
+    padding: 12px 33px;
     margin: 10px; 
     border-radius: 6px;
     text-decoration: none;
@@ -49,7 +55,7 @@ h2 {
     display: inline-block;
     background-color:  #ffffff;;
     color: #B09000; 
-    padding: 12px 40px;
+   padding: 12px 33px;
     margin: 10px; 
     border-radius: 6px;
     text-decoration: none;
@@ -75,7 +81,8 @@ h2 {
 }
 
   .button {
-        padding-left: 30%;
+      padding-left: 31%;
+    padding-top: 2%;
     }
 
 .button1:hover {
@@ -86,6 +93,16 @@ h2 {
    background-color: #B09000; 
     color: #fff;
 }
+
+h2 {
+    padding-bottom: 2%;
 }
+
+p {
+    margin-right: 4%;
+}
+
+}
+
 </style>
 
