added nav til astro index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Guldbox from "../components/Guldbox.astro";
 import Cirkler from "../components/Cirkler.astro";
 import Video from "../components/Video.astro";
 import Footer from "../components/Footer.astro";
+import Nav from "../components/Nav.astro";
 ---
 
 <html lang="da">
@@ -19,6 +20,7 @@ import Footer from "../components/Footer.astro";
 	</head>
 	<body>
 		<h1>Astro</h1>
+		<Nav />
 		<Kort />
 		<Cirkler />
 		<Guldbox />
