--- a/src/components/Kort.astro
+++ b/src/components/Kort.astro
@@ -98,8 +98,8 @@ display: block;
     let image = kort.querySelector('#image');
     let nameElement = kort.querySelector('#name');
 
-    let images = ['../../public/img/gio.png', '../../public/img/jinni.png', '../../public/img/hobibi.png', '../../public/img/namnam.png'];
-    let names = ['Emma Jensen', 'Zara Karim', 'Liv Andersen', 'Kezia Hansen'];
+    let images = ['../../public/img/zara.png', '../../public/img/thor.png', '../../public/img/patrik.png', '../../public/img/liv.png','../../public/img/kezia.png','../../public/img/ida.png','../../public/img/chris.png'];
+    let names = ['Zara Karim', 'Thor Bigand', 'Patrick Larsen', 'Liv Andersen', 'Kezia Hansen', 'Ida Mikkelsen', 'Christopher Jensen'];
 
     let currentIndex = 0;
 
