--- a/src/components/Kort.astro
+++ b/src/components/Kort.astro
@@ -32,6 +32,7 @@ import "../css/style.css";
         border-style: solid;
 border-color: #204A78;
 padding: 10px;
+margin-left: 12%;
     }
 
     img {
