--- a/src/components/Kort.astro
+++ b/src/components/Kort.astro
@@ -32,7 +32,8 @@ import "../css/style.css";
         border-style: solid;
 border-color: #204A78;
 padding: 10px;
-margin-left: 12%;
+margin-left: 14%;
+  margin-top: 5%;
     }
 
     img {
