--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -1,17 +1,42 @@
 ---
 ---
+<div class="line"></div>
+<h2>Impoter syndrom?</h2>
+<h3>Se mere på vores <a href="#">Tiktok</a> og <a href="#">Instagram</a></h3>
  <iframe class="video" title="YouTube video player" src="https://www.youtube.com/embed/8u2OsIzteHk">
         </iframe>
 <style>
 
 .video {
-  width: 88%;
+  width: 85%;
   height: 39%;
   aspect-ratio: 560/315;
   border: 3.5px solid #204A78;
   border-radius: 15px;
   box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
   margin: 20px 20px;
+  margin-left: 53px;
+
+}
+a {
+  color: #204A78;
+}
+.line {
+  background-color: #204A78;
+  height: 1px;
+  width: 311px;
+  margin-left: 18%;
+  margin-top: 10%;
+}
+h3 {
+color: #1895d3;
+margin-left: 12%;
+}
+
+h2 {
+  color: #204A78;
+  margin-left: 30%;
+  margin-top: 10%;
 }
 
   @media (min-width: 769px) {
