--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,6 +20,8 @@ import Nav from "../components/Nav.astro";
 	</head>
 	<body>
 		<Nav />
+		<h1 class="overskrift">Karriere <span>- Kick</span></h1>
+		<h2 class="overskrift2">#KarriereKick</h2>
 		<Kort />
 		<Cirkler />
 		<Guldbox />
@@ -28,5 +30,3 @@ import Nav from "../components/Nav.astro";
 		<Footer />
 	</body>
 </html>
-
-<h1></h1>
