--- a/src/components/Guldbox.astro
+++ b/src/components/Guldbox.astro
@@ -14,6 +14,9 @@
 
 h1 {
     font-size: 170%;
+    margin-left: 13%;
+    text-align: center;
+    margin-top: 9%;
 }
 
 p {
@@ -24,14 +27,15 @@ p {
 h2 {
     margin-left: 6%;
     padding-top: 5%;
-    padding-bottom: 1%;
+    padding-bottom: 2%;
+
 }
     .box {
     background-color: #B09000;
     width: 360px; 
     height: 260px; 
     border-radius: 15px;
-    margin-left: 2%;
+    margin-left: 13.5%;
     }
 
     .button {
