--- a/src/components/Cirkler.astro
+++ b/src/components/Cirkler.astro
@@ -33,7 +33,7 @@
     gap: 10px;
     text-align: center;
     margin: 20px;
-    margin-left: 16%;
+    margin-left: 8%;    margin-top: 10%;
   }
 
    .images-container p {
