--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -8,14 +8,14 @@
 <style>
 
 .video {
-  width: 85%;
+  width: 91%;
   height: 39%;
   aspect-ratio: 560/315;
   border: 3.5px solid #204A78;
   border-radius: 15px;
   box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
-  margin: 20px 20px;
-  margin-left: 53px;
+margin-top: 20px;
+  margin-left: 20px;
 
 }
 a {
@@ -25,17 +25,17 @@ a {
   background-color: #204A78;
   height: 1px;
   width: 311px;
-  margin-left: 18%;
+  margin-left: 10%;
   margin-top: 10%;
 }
 h3 {
 color: #1895d3;
-margin-left: 12%;
+margin-left: 8%;
 }
 
 h2 {
   color: #204A78;
-  margin-left: 30%;
+  margin-left: 21%;
   margin-top: 10%;
 }
 
