--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,13 +20,17 @@ import Nav from "../components/Nav.astro";
 	</head>
 	<body>
 		<Nav />
+		<div class="gro"></div>
+		<div class="brun">
 		<h1 class="overskrift">Karriere <span>- Kick</span></h1>
 		<h2 class="overskrift2">#KarriereKick</h2>
 		<Kort />
+	</div>
+	<div class="hvid">
 		<Cirkler />
 		<Guldbox />
 		<Video />
-
+</div>
 		<Footer />
 	</body>
 </html>
