--- a/src/components/Guldbox.astro
+++ b/src/components/Guldbox.astro
@@ -14,9 +14,8 @@
 
 h1 {
     font-size: 170%;
-    margin-left: 13%;
-    text-align: center;
-    margin-top: 9%;
+margin-left: 3%;    text-align: center;
+    margin-top: 17%;
 }
 
 p {
@@ -33,9 +32,9 @@ h2 {
     .box {
     background-color: #B09000;
     width: 360px; 
-    height: 260px; 
+    height: 275px; 
     border-radius: 15px;
-    margin-left: 13.5%;
+    margin-left: 4.5%;
     }
 
     .button {
