--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,11 +29,7 @@
 }
 
 html {
-  height: 100%;
   background-color: #e6e6de;
-  background-image: url(../../public/img/bokse.png);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 img {
@@ -54,6 +50,7 @@ a {
   color: #1895d3;
   margin-left: 30%;
   margin-top: 5%;
+  padding-top: 6%;
 }
 .overskrift2 {
   color: #1895d3;
@@ -63,4 +60,28 @@ a {
 }
 span {
   color: #204a78;
+}
+
+.brun {
+  background-color: #cdc5b7;
+  border-top-left-radius: 20%;
+  margin-left: 42px;
+  position: relative;
+  margin-top: -20%;
+}
+
+.gro {
+  background-color: #f1f1ec;
+  border-top-left-radius: 45px;
+  margin-left: 42px;
+  width: auto;
+  height: 100px;
+}
+
+.hvid {
+  background-color: rgb(255, 255, 255);
+  margin-left: 42px;
+  padding-top: 10%;
+  padding-bottom: 10%;
+  border-bottom-left-radius: 42px;
 }
