--- a/src/components/Cirkler.astro
+++ b/src/components/Cirkler.astro
@@ -44,6 +44,9 @@ margin: 10px;
     .images-container {
       grid-template-rows: 1fr;
       grid-template-columns: repeat(4, 1fr);
+      margin-top: -3%;
+      margin-left: -3%;
+      margin-right: 7%;
     }
 
      .images-container img {
@@ -53,6 +56,10 @@ margin: 10px;
 
 .images-container p {
 margin-left: 154px;
+  }
+
+  p {
+    margin-left: 183px;
   }
 
   }
