--- a/src/components/Guldbox.astro
+++ b/src/components/Guldbox.astro
@@ -75,16 +75,18 @@ h2 {
     height: 250px; 
     border-radius: 15px;
     position: relative;
-    left: 22%;
+    left: 18%;
     }
     
     h1 {
      font-size: 290%;
      padding-left: 30%;
+     margin-left: -27%;
+     margin-top: 10%;
 }
 
   .button {
-      padding-left: 31%;
+    padding-left: 25%;
     padding-top: 2%;
     }
 
@@ -104,6 +106,7 @@ h2 {
 p {
     margin-right: 4%;
 }
+
 
 }
 
