--- a/src/components/Kort.astro
+++ b/src/components/Kort.astro
@@ -91,6 +91,13 @@ display: block;
 .id {
     text-align: center;
 }
+@media (min-width: 769px) {
+.kort {
+    margin-left: 7%;
+    width: 415px;
+  height: 258px;
+}
+}
 
 </style>
 
