--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -48,6 +48,21 @@ width: 60%;
     border-radius: 15px;
     box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
     margin: 20px 312px;
+    margin-right: 116px;
+    margin-left: 273px;
+}
+.line {
+  width: 913px;
+  margin-left: 12%;
+}
+
+h2 {
+  margin-left: 28%;
+    font-size: 65px;
+}
+
+h3 {
+  margin-left: 37%;
 }
 
   }
