--- a/src/css/style.css
+++ b/src/css/style.css
@@ -85,3 +85,28 @@ span {
   padding-bottom: 10%;
   border-bottom-left-radius: 42px;
 }
+
+@media (min-width: 769px) {
+  .brun {
+    border-top-left-radius: 78px;
+    margin-top: -9%;
+    margin-left: 117px;
+  }
+  .gro {
+    margin-left: 117px;
+  }
+
+  .hvid {
+    margin-left: 117px;
+  }
+
+  .overskrift {
+    margin-left: 35%;
+    font-size: 57px;
+  }
+
+  .overskrift2 {
+    margin-left: 44%;
+    font-size: 30px;
+  }
+}
