--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -11,7 +11,7 @@
         </div>
 
         <div class="nav-item">
-            <a href="#">Blev medlem</a>
+            <a class="medlem" href="#">Blev medlem</a>
         </div>
 
         <div class="nav-item">
@@ -41,6 +41,13 @@
         padding: 10px;
         color: #fff;
         padding-right: 5px;
+    }
+    .medlem {
+        color: #1895d3;
+    }
+
+    .medlem:hover {
+        color: #204A78;
     }
 
     .navbar-left,
@@ -76,6 +83,9 @@ margin-left: 62px;
   color: #fff;
     }
 
+    .mit:hover {
+        color: #1895d3;
+    }
     .burger-menu {
         display: none; 
         cursor: pointer;
