--- a/src/components/Guldbox.astro
+++ b/src/components/Guldbox.astro
@@ -31,22 +31,22 @@ h2 {
 }
     .box {
     background-color: #B09000;
-    width: 360px; 
+    width: 303px;
     height: 275px; 
     border-radius: 15px;
     margin-left: 4.5%;
+    margin-top: 6%;
     }
 
     .button {
-        padding-top: 2%;
-        padding-left: 2%;
+        padding-left: 6%;
     }
 
     .button1 {
     display: inline-block;
     background-color:  #B09000;;
     color: #fff; 
-    padding: 12px 33px;
+    padding: 12px 10px;
     margin: 10px; 
     border-radius: 6px;
     text-decoration: none;
@@ -58,7 +58,7 @@ h2 {
     display: inline-block;
     background-color:  #ffffff;;
     color: #B09000; 
-   padding: 12px 33px;
+   padding: 12px 10px;
     margin: 10px; 
     border-radius: 6px;
     text-decoration: none;
