--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -24,18 +24,19 @@ a {
 .line {
   background-color: #204A78;
   height: 1px;
-  width: 311px;
+  width: 272px;
   margin-left: 10%;
   margin-top: 10%;
 }
 h3 {
 color: #1895d3;
-margin-left: 8%;
+margin-left: 16%;
+  font-size: 12px;
 }
 
 h2 {
   color: #204A78;
-  margin-left: 21%;
+  margin-left: 18%;
   margin-top: 10%;
 }
 
