--- a/src/components/Guldbox.astro
+++ b/src/components/Guldbox.astro
@@ -69,10 +69,18 @@ h2 {
 
 /** MOBILE (WEB) **/
 @media only screen and (min-width: 768px) {
+
+    .button1 {
+        padding: 12px 33px;
+    }
+
+    .button2 {
+        padding: 12px 33px;
+    }
  .box {
     background-color: #B09000;
     width: 60%; 
-    height: 250px; 
+    height: 231px;
     border-radius: 15px;
     position: relative;
     left: 18%;
@@ -106,7 +114,6 @@ h2 {
 p {
     margin-right: 4%;
 }
-
 
 }
 
