--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -3,7 +3,7 @@
 <div class="line"></div>
 <h2>Impoter syndrom?</h2>
 <h3>Se mere på vores <a href="#">Tiktok</a> og <a href="#">Instagram</a></h3>
- <iframe class="video" title="YouTube video player" src="https://www.youtube.com/embed/8u2OsIzteHk">
+ <iframe class="video" title="YouTube video player" src="https://www.youtube.com/watch?v=SiIexIEEPO8">
         </iframe>
 <style>
 
@@ -64,6 +64,8 @@ h2 {
 
 h3 {
   margin-left: 37%;
+    font-size: 20px;
+
 }
 
   }
