--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -3,8 +3,8 @@
 <div class="line"></div>
 <h2>Impoter syndrom?</h2>
 <h3>Se mere på vores <a href="#">Tiktok</a> og <a href="#">Instagram</a></h3>
- <iframe class="video" title="YouTube video player" src="https://www.youtube.com/watch?v=SiIexIEEPO8">
-        </iframe>
+        <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/SiIexIEEPO8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 <style>
 
 .video {
