--- a/src/components/Cirkler.astro
+++ b/src/components/Cirkler.astro
@@ -3,19 +3,19 @@
 
   <div class="images-container">
     <div>
-    <img src="../../public/img/Karrierskift.png" alt="Image 1">
+    <img src="../../img/Karrierskift.png" alt="Image 1">
     <p>Karrierskift</p>
      </div>
      <div>
-     <img src="../../public/img/Studere-du-business.png" alt="Image 2">
+     <img src="../../img/Studere-du-business.png" alt="Image 2">
      <p>Studere du business?</p>
      </div>
      <div>
-        <img src="../../public/img/Medlem-af-CA.png" alt="Image 3">
+        <img src="../../img/Medlem-af-CA.png" alt="Image 3">
          <p>Medlem af CA</p>
      </div>
 <div>
-    <img src="../../public/img/Dagpenge.png" alt="Image 4">
+    <img src="../../img/Dagpenge.png" alt="Image 4">
     <p>Dagpenge</p>
 </div>
   </div>
