--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -31,13 +31,13 @@
 
  <section class="grid_img">
     <div>
-  <img src="../../public/img/CA_Logo_2021_horisontal_DK_RGB.png" alt="Image 2">
+  <img src="../../img/CA_Logo_2021_horisontal_DK_RGB.png" alt="Image 2">
     </div>
-    <div> <img src="../../public/img/trustpilot.png" alt="Image 2">
+    <div> <img src="../../img/trustpilot.png" alt="Image 2">
     </div>
-    <div> <img src="../../public/img/group.png" alt="Image 2">
+    <div> <img src="../../img/group.png" alt="Image 2">
     </div>
-    <div> <img src="../../public/img/student.png" alt="Image 2">
+    <div> <img src="../../img/student.png" alt="Image 2">
     </div>
  </section>
 
