--- a/src/components/Kort.astro
+++ b/src/components/Kort.astro
@@ -107,7 +107,7 @@ margin-left: 7%;
     let image = kort.querySelector('#image');
     let nameElement = kort.querySelector('#name');
 
-    let images = ['../../public/img/zara.png', '../../public/img/thor.png', '../../public/img/patrik.png', '../../public/img/liv.png','../../public/img/kezia.png','../../public/img/ida.png','../../public/img/chris.png'];
+    let images = ['../../img/zara.png', '../../img/thor.png', '../../img/patrik.png', '../../img/liv.png','../../img/kezia.png','../../img/ida.png','../../img/chris.png'];
     let names = ['Zara Karim', 'Thor Bigand', 'Patrick Larsen', 'Liv Andersen', 'Kezia Hansen', 'Ida Mikkelsen', 'Christopher Jensen'];
 
     let currentIndex = 0;
