--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,13 +1,13 @@
 <nav class="navbar">
     <div class="navbar-left">
         <div class="logo">
-            <img src="../public/img/logo2.png" alt="Logo">
+            <img src="../img/logo2.png" alt="Logo">
         </div>
     </div>
 
     <div class="navbar-right">
         <div class="search-icon">
-            <img src="../public/img/search.png" alt="Search">
+            <img src="../img/search.png" alt="Search">
         </div>
 
         <div class="nav-item">
